# deltafs

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  LICENSE  LICENSE.txt  LOG  Makefile  README.mac.md  README.md  README.rados.md  build_detect_platform
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  io_client.cc  io_client.h  io_deltafs.cc  io_posix.cc
benchmarks/large_dir/: large_dir.cc
benchmarks/vpic_io/: vpic_io.cc
dev/: Makefile  build_detect_platform  cci.ini  ceph.conf  ceph_rados.sh  format_code.sh  gcc_compatibility_test.sh  rebuild_project.sh
dev/plfsio/: plot_events.py
include/deltafs/: deltafs_api.h  deltafs_config.h  deltafs_config.h.in  deltafs_config_expand.h.in
src/: CMakeLists.txt  gigaplus.cc  gigaplus.h  gigaplus_test.cc  mds_api.cc  mds_api.h  mds_api_test.cc  mds_types.cc  mercury_rpc.cc  mercury_rpc.h  mercury_test.cc  rpc.cc  rpc.h  xxhash.cc  xxhash.h
src/cmds/: CMakeLists.txt  deltafs_access.cc  deltafs_accessdir.cc  deltafs_chown.cc  deltafs_ls.cc  deltafs_mkdir.cc  deltafs_mkdirplus.cc  deltafs_shell.cc  deltafs_stat.cc  deltafs_sysinfo.cc  deltafs_touch.cc  deltafs_unlink.cc
src/libdeltafs/: CMakeLists.txt  bbos_env.cc  bbos_env.h  bbos_env_test.cc  blkdb.cc  blkdb.h  blkdb_test.cc  deltafs-config.cmake.in  deltafs_api.cc  deltafs_api_test.cc  deltafs_client.cc  deltafs_client.h  deltafs_common.cc  deltafs_common.h  deltafs_conf.cc  deltafs_conf.h  deltafs_conf_loader.h  deltafs_conf_raw.h  deltafs_envs.cc  deltafs_envs.h  deltafs_format.h  deltafs_mds.cc  deltafs_mds.h  deltafs_plfsio.cc  deltafs_plfsio.h  deltafs_plfsio_api.cc  deltafs_plfsio_api.h  deltafs_plfsio_batch.cc  deltafs_plfsio_batch.h  deltafs_plfsio_cuckoo.cc  deltafs_plfsio_cuckoo.h  deltafs_plfsio_cuckoo_test.cc  deltafs_plfsio_events.cc  deltafs_plfsio_events.h  deltafs_plfsio_filter.cc  deltafs_plfsio_filter.h  deltafs_plfsio_filter_test.cc  deltafs_plfsio_format.cc  deltafs_plfsio_format.h  deltafs_plfsio_idx.cc  (+33 more)
src/libdeltafs/plfsio/: deltafs_plfsio.cc  deltafs_plfsio.h  deltafs_plfsio_cuckoo.h  deltafs_plfsio_impl.cc  deltafs_plfsio_impl.h  deltafs_plfsio_internal.cc  deltafs_plfsio_internal.h  deltafs_plfsio_nio.cc  deltafs_plfsio_recov.h  deltafs_plfsio_sideio.cc  deltafs_plfsio_util.cc  deltafs_plfsio_util.h
src/libdeltafs/plfsio/v1/: bufio.cc  bufio.h  bufio_test.cc  builder.cc  builder.h  coding_float.h  compaction_mgr.h  cuckoo.cc  cuckoo.h  cuckoo_test.cc  deltafs_plfsio_bufio.cc  deltafs_plfsio_bufio.h  deltafs_plfsio_bufio_test.cc  deltafs_plfsio_builder.cc  deltafs_plfsio_builder.h  deltafs_plfsio_bulkio.cc  deltafs_plfsio_bulkio.h  deltafs_plfsio_cuckoo.cc  deltafs_plfsio_cuckoo.h  deltafs_plfsio_cuckoo_test.cc  deltafs_plfsio_doublebuf.cc  deltafs_plfsio_doublebuf.h  deltafs_plfsio_events.cc  deltafs_plfsio_events.h  deltafs_plfsio_filter.cc  deltafs_plfsio_filter.h  deltafs_plfsio_filter_test.cc  deltafs_plfsio_filterio.cc  deltafs_plfsio_filterio.h  deltafs_plfsio_filterio_test.cc  deltafs_plfsio_format.cc  deltafs_plfsio_format.h  deltafs_plfsio_idx.h  deltafs_plfsio_internal.cc  deltafs_plfsio_internal.h  deltafs_plfsio_io.cc  deltafs_plfsio_io.h  deltafs_plfsio_nio.cc  deltafs_plfsio_pdb.cc  deltafs_plfsio_pdb.h  (+48 more)
src/libdeltafs/util/: blkdb.cc  blkdb.h  blkdb_test.cc  dcntl.cc  dcntl.h  dirlock.h  guard.h  index_cache.cc  index_cache.h  lease.cc  lease.h  logging.cc  logging.h  lookup_cache.cc  lookup_cache.h  mdb.cc  mdb.h  rwlock.h
src/server/: CMakeLists.txt  deltafs_server.cc
